# agent-hub

./: .config.example.yaml  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.fubar.yml  docker-compose.yml  justfile  package.json  pyproject.toml
docs/: concepts.md  demo-quickstart.md  deployment.md  device-setup.md  lessons-learned.md
scripts/: copy_silero.py  download_models.py  smoke.py  test_features.py
src/agent_hub/: __init__.py  config.py
src/agent_hub/dashboard/: __init__.py  app.py
src/agent_hub/providers/: __init__.py
src/agent_hub/providers/asr/: __init__.py  funasr_onnx_provider.py  funasr_provider.py  openai_whisper.py
src/agent_hub/providers/llm/: __init__.py  openai_provider.py
src/agent_hub/providers/tts/: __init__.py  edge.py  kitten.py
src/agent_hub/registry/: __init__.py  models.py  store.py
src/agent_hub/server/: __init__.py  __main__.py  audio.py  checkin.py  emotion.py  image_explain.py  mcp_bridge.py  mcp_client.py  protocol.py  session_state.py  tool_policy.py  transcript_log.py  ws_session.py
src/agent_hub/skills/: __init__.py  get_current_time.py  get_weather.py  web_search.py
tests/: conftest.py  test_config.py
tests/dashboard/: test_security.py  test_status_api.py
tests/server/: test_asr_provider.py  test_audio.py  test_checkin.py  test_image_explain.py  test_protocol.py  test_skills.py  test_startup.py  test_streaming_turn.py  test_tool_policy.py
