[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-hub"
version = "0.1.0"
description = "Control plane for voice-enabled ESP32 devices and their agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "loguru>=0.7",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "pyyaml>=6.0",
    "edge-tts>=6.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "soundfile>=0.12",
    "kittentts",
    "openai>=1.30",
    "opuslib-next>=1.1.5",
    "onnx>=1.18,<1.19",
    "onnxruntime>=1.18",
    "silero-vad>=5.0",
    "funasr>=1.2.7",
    "funasr-onnx>=0.4.1",
    "modelscope>=1.32",
    "torch>=2.2",
    "torchaudio>=2.2",
    "python-dotenv>=1.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-pyyaml",
]

[tool.uv.sources]
kittentts = { url = "https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl" }
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent_hub"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["onnxruntime", "opuslib_next", "serial", "soundfile"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
